app/assets/stylesheets/static_pages.css.scss
// Place all the styles related to the static_pages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary {
  display:block
}

html, body, .container {
  height:100%;
}

.containter {
  position: absolute;
  overflow-x: hidden;
}

html {
  margin:0;
}

h1,h2,h3,h4 {
 font-family:"freight-sans-pro","Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
 font-weight:700;
}

body {
  text-rendering:optimizeLegibility;
  -webkit-font-smoothing:antialiased;
  font-family:"ff-tisa-web-pro",Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight:400;
  color:#333332;
  font-size:18px;
  line-height:1.4;
}

body {
  margin:0;
  top: 0;
  left: 0;
}

.container {
  background-color:#fff;
  height: auto;
}

.header {
  position:fixed;
  z-index:1000;
  top:0px;
  left:0;
  width:30%;
  height:100px;
  max-width:500px;
  background-color: #fff;
}

.profile {
  position: relative;
  // top:0;
  height: 80px;
  margin-top: 10px;
  margin-left: 10%;
  max-width:90%;
  z-index: 2000;
}

/*=========COVER==========*/

.cover {
  position:absolute;
  z-index:1000;
  top:100px;
  left:0;
  width:30%;
  height:100%;
  max-width:500px;
  background-color: #fff;
}

.cover {
  overflow: auto;
  /*height: auto;*/
}

/*.cover. img-loaded {
  background:#000
}*/

.cover-avatar {
  position: relative;
  display: inline-block;
  border-radius: 100%;
  border: solid 2px #fff;
  height: 30px;
  width: 30px;
  margin-top: 30px;
  left: 10%;
  -webkit-box-shadow:0 1px 1px rgba(0,0,0,0.3);
  -moz-box-shadow:0 1px 1px rgba(0,0,0,0.3);
  box-shadow:0 1px 1px rgba(0,0,0,0.3)
}

.cover-nickname {
  display: inline-block;
  margin-left: 12%;
  height: 30px;
}

.cover {
  position:fixed;
}

.stream {
  position:relative;
  bottom:0;
  padding:50px 10% 10%;
  width:100%;
  -webkit-box-sizing:border-box;
  -moz-box-sizing:border-box;
  box-sizing:border-box;
}

.well {
  position:relative;
  padding-bottom:50px;
  *zoom:1;
  overflow:auto;
}

.tweet-well {
  display: block;
  padding: 0;
  width: 100%;
  padding-bottom: 10px;
}

.tweet-well-title {
  font-size:24px;
  line-height:1.2;
  padding-bottom:5px;
  height: 20px;
}

.tweet-well-avatar {
  position:relative;
  top:-60px;
  left:9px;
  display: block-inline;
  height: 30px;
  width: 30px;
  border-radius: 50%;
  margin-left: 80%;
}

.tweet-well-text {
  position:relative;
  top:-60px;
  display: block;
  height: auto;
  padding-bottom: -60px;
}

.nickname {
  display: inline;
}

/*========WRAPPER========*/

.wrapper {
  outline:0;
  position:absolute;
  width:100%;
  height:auto;
  left:30%;
  right:0;
  top:0;
  bottom:0;
  background-color: #fff;
  overflow-x:hidden;
  /*-webkit-overflow-scrolling:touch;*/
}

.wrapper-img {
  position:absolute;
  width:100%;
  height:100%;
  top:0;
  left:0;
  z-index: 100;
  background-position:center;
  -webkit-background-size:cover;
  -moz-background-size:cover;
  -o-background-size:cover;
  background-size:cover;
/*  -webkit-box-shadow:inset -1px 0 0 rgba(0,0,0,0.3);
  -moz-box-shadow:inset -1px 0 0 rgba(0,0,0,0.3);
  box-shadow:inset -1px 0 0 rgba(0,0,0,0.3)*/
}

.wrapper-paper {
  width:100%;
  -webkit-box-sizing:border-box;
  -moz-box-sizing:border-box;
  box-sizing:border-box;
  max-width:810px;
  padding:50px 85px;
  z-index:1000;
  padding-top:100px;
  padding-left:5%;
  padding-right:5%;
}



.paper-article-title {
  height:40px;
  border-top:1px solid #dededc;
  border-bottom:1px solid #dededc;
  font-size:14px;
  color:#b3b3b1;
  font-family:"freight-sans-pro","Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
  font-weight:700
}


/*=====MEDIA CALLS======*/

@media all and (max-width:1000px) {
  .cover {
    position:relative!important;
    width:100%;
    max-width:none;
    height:400px;
    top:50px;
    left:0;
  }

  .wrapper {
    left:0;
    position:relative
  }

  .wrapper-paper {
    padding:40px 10%;
    max-width:100%;
  }

  .header {
    position:relative!important;
    width:100%;
    max-width:none;
    max-height:50px;
    top:0px;
    left:0;
  }

  .cover-avatar {
    position: relative;
    display: inline-block;
    border-radius: 100%;
    border: solid 2px #fff;
    height: 30px;
    width: 30px;
    // margin-top: 30px;
    left: 10%;
    -webkit-box-shadow:0 1px 1px rgba(0,0,0,0.3);
    -moz-box-shadow:0 1px 1px rgba(0,0,0,0.3);
    box-shadow:0 1px 1px rgba(0,0,0,0.3)
  }
}

@media all and (max-width:500px) {
  .cover {
    height:300px;
    top:50px;
    left:0;
  }

  .wrapper-paper {
    padding:30px 5%;
    max-width:100%;
  }

  .stream {
    padding:30px 5%;
    max-width:100%;
  }

  .header {
    position:relative!important;
    width:100%;
    max-width:none;
    max-height:50px;
    top:0;
    left:0;
  }

  .cover-avatar {
    position: relative;
    display: inline-block;
    border-radius: 100%;
    border: solid 2px #fff;
    height: 30px;
    width: 30px;
    // margin-top: 30px;
    left: 5%;
    -webkit-box-shadow:0 1px 1px rgba(0,0,0,0.3);
    -moz-box-shadow:0 1px 1px rgba(0,0,0,0.3);
    box-shadow:0 1px 1px rgba(0,0,0,0.3)
  }
}


@media all and (min-width:1666px) {
  .wrapper {
    left:500px
  }

  .wrapper-paper {
    padding-left:185px;
    max-width:900px
  }
}

@media screen and (max-device-width:1000px) {
  html {
    -webkit-text-size-adjust:none;
  }
}

::-moz-selection {
  background-color: #c0392b;
  color: #fff;
}

::selection {
  background-color: #c0392b;
  color: #fff;
}

